Fix display bug on mobile menu

--- a/app/frontend/components/navbar_cookoon/navbar_cookoon.scss
+++ b/app/frontend/components/navbar_cookoon/navbar_cookoon.scss
@@ -16,6 +16,7 @@
       padding: 10px;
       align-items: center;
       position: relative;
+      max-height: 50px;
     }
   }
   &-navigation {
